# mega-obj-soaker

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  run_tests.sh
.github/workflows/: ci.yml
benchmark/: README.md  run.sh
src/: config.rs  coordinator.rs  main.rs  optimizer.rs  pattern.rs  s3.rs  supervisor.rs  worker.rs
